--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,16 @@ body {
     font-family: 'Andika', sans-serif;
     background-color:#202020;
     color: #fff;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+button {
+    font-family: inherit;
+    width: 20%;
 }
