--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,58 @@ body {
     margin: 0;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 15%;
 }
 
 button {
     font-family: inherit;
-    width: 20%;
+    font-size: inherit;
+    border: none;
+    border-radius: 10px;
+    width: 75px;
+    cursor: pointer;
+    color: #000;
+    padding: 5px;
+    box-shadow: 0 9px #5c5c5c;
+    margin-bottom: 20px;
+}
+
+button:hover {background-color: #3e8e41}
+
+button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #444444;
+    transform: translateY(4px);
+}
+
+#player, #currentPlayerScore  {
+    width: 180px;
+    margin-left: 40px;
+}
+
+#computer, #currentComputerScore {
+    width: 150px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+}
+
+#result, #winner {
+    font-weight: bold
+}
+
+#winner {
+    font-size: 2em;
+    
 }
