--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,18 @@ body {
     flex-basis: 100%;
     height: 0;
 }
+
 .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 15%;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
 }
 
 button {
@@ -30,7 +37,9 @@ button {
     margin-bottom: 20px;
 }
 
-button:hover {background-color: #3e8e41}
+button:hover {
+    background-color: #3e8e41
+}
 
 button:active {
     background-color: #3e8e41;
@@ -47,17 +56,10 @@ button:active {
     width: 150px;
 }
 
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    width: 330px;
-}
-
 #result, #winner {
     font-weight: bold
 }
 
 #winner {
     font-size: 2em;
-    
 }
